# reference_generator

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/circle/: CMakeLists.txt
apps/circle/include/: parameters_list.h  paths.h  set_circle_parameters.h
apps/circle/parameters/: circle.yaml
apps/circle/src/: main.cpp
apps/circle_traj/src/: main.cpp
apps/circle_traj_position/: CMakeLists.txt
apps/circle_traj_velocity/: CMakeLists.txt
apps/circle_traj_velocity/src/: main.cpp
apps/demo/: CMakeLists.txt
apps/demo/parameters/: waypoints.csv
apps/demo/src/: main.cpp
apps/go_down/: CMakeLists.txt
apps/go_down/src/: main.cpp
apps/go_to_position/: CMakeLists.txt
apps/go_to_position/include/: parameters_list.h  paths.h  set_parameters.h
apps/go_to_position/parameters/: setpoint.yaml
apps/go_to_position/src/: main.cpp
apps/grasp_object/: CMakeLists.txt
apps/grasp_object/include/: paths.h
apps/grasp_object/parameters/: waypoints.csv
apps/grasp_object/src/: main.cpp
apps/grasping_first_version/: CMakeLists.txt
apps/grasping_first_version/include/: grasper.h  paths.h
apps/grasping_first_version/parameters/: mueller_waypoints.csv  normal_waypoints.csv  parameters.yaml  setpoint.yaml  setpoints.csv
apps/grasping_first_version/src/: go_to_object.cpp  go_to_pos.cpp  go_to_waypoint.cpp  grasper.cpp  main.cpp  main_mueller.cpp  main_normal.cpp  mueller_controller.cpp  set_parameters.cpp
apps/grasping_lib/: CMakeLists.txt
apps/grasping_lib/src/: go_over_object.cpp  go_to_waypoint.cpp  grasp_object.cpp
apps/grasping_second_version/: CMakeLists.txt
apps/grasping_second_version/include/: grasper.h  helper.h  paths.h
apps/grasping_second_version/parameters/: parameters.yaml  setpoints.csv
apps/grasping_second_version/src/: go_near_object.cpp  go_to_pos.cpp  grasper.cpp  grip.cpp  main.cpp  set_parameters.cpp
apps/grasping_third_version/: CMakeLists.txt
apps/grasping_third_version/include/: grasper.h  paths.h
apps/grasping_third_version/parameters/: parameters.yaml  setpoints.csv
apps/grasping_third_version/src/: SingleAxisTrajectory.cpp  departure.cpp  go_to_pos.cpp  grasper.cpp  main.cpp  set_parameters.cpp
apps/lemniscate/: CMakeLists.txt
apps/lemniscate/include/: include_helper.h  parameters_list.h  paths.h  set_parameters.h
apps/lemniscate/parameters/: lemniscate.yaml
apps/lemniscate/src/: main.cpp
apps/lemniscate_traj_position/: CMakeLists.txt
apps/lemniscate_traj_position/src/: main.cpp
apps/minimum_jerk/: CMakeLists.txt
apps/minimum_jerk/include/: helper.h  parameters_list.h  paths.h  set_parameters.h
apps/minimum_jerk/parameters/: quad_properties.yaml  setpoint.yaml
apps/minimum_jerk/src/: main copy.cpp  main.cpp
apps/minimum_jerk_new/: CMakeLists.txt
apps/minimum_jerk_new/include/: include_helper.h  parameters_list.h  paths.h  set_parameters.h  sub_callback.h
apps/minimum_jerk_new/parameters/: quad_properties.yaml  setpoint.yaml  waypoints.csv
apps/minimum_jerk_new/src/: main.cpp
apps/mueller_controller/: CMakeLists.txt
apps/square_traj/: CMakeLists.txt
apps/square_traj/src/: main.cpp
apps/swoop/: CMakeLists.txt
apps/swoop/include/: paths.h
apps/swoop/src/: main.cpp
lib/: CMakeLists.txt
lib/raptor_lib/: CMakeLists.txt
lib/raptor_lib/behaviours_lib/: CMakeLists.txt
lib/raptor_lib/behaviours_lib/go_over_object/: CMakeLists.txt
lib/raptor_lib/behaviours_lib/go_over_object/include/: go_over_object.h
lib/raptor_lib/behaviours_lib/go_over_object/src/: go_over_object.cpp  set_values.cpp
lib/raptor_lib/behaviours_lib/overhead_grasp/: CMakeLists.txt
lib/raptor_lib/behaviours_lib/overhead_grasp/include/: overhead_grasp.h
lib/raptor_lib/behaviours_lib/overhead_grasp/src/: motion_controller.cpp  overhead_grasp.cpp  set_values.cpp
lib/raptor_lib/common/: CMakeLists.txt
lib/raptor_lib/common/FlightManager/: CMakeLists.txt
lib/raptor_lib/common/FlightManager/include/: FlightManager.h
lib/raptor_lib/common/FlightManager/src/: FlightManager.cpp
lib/raptor_lib/common/Raptor/: CMakeLists.txt
lib/raptor_lib/common/Raptor/include/: Raptor.h
lib/raptor_lib/common/Raptor/src/: Raptor.cpp  set_values.cpp
lib/raptor_lib/common/behaviour/: CMakeLists.txt
lib/raptor_lib/common/behaviour/include/: behaviour.h
lib/raptor_lib/common/behaviour/src/: behaviour.cpp
lib/raptor_lib/common/dds_manager/: CMakeLists.txt
lib/raptor_lib/common/dds_manager/include/: dds_manager.h
lib/raptor_lib/common/dds_manager/src/: dds_manager.cpp
lib/raptor_lib/common/flight_manager/: CMakeLists.txt
lib/raptor_lib/common/flight_manager/include/: flight_manager.h
lib/raptor_lib/common/flight_manager/src/: add_behaviour.cpp  flight_manager.cpp  set_values.cpp
lib/raptor_lib/common/include/: FlightManager.h
lib/raptor_lib/common/src/: FlightManager.cpp
lib/raptor_lib/common/utilities/: CMakeLists.txt
lib/raptor_lib/components/: CMakeLists.txt
lib/raptor_lib/components/motion_controller/: CMakeLists.txt
lib/raptor_lib/components/motion_controller copy/: CMakeLists.txt
lib/raptor_lib/components/motion_controller copy/include/: motion_controller.h
lib/raptor_lib/components/motion_controller/include/: motion_controller.h
lib/raptor_lib/components/motion_controller/src/: check_reached.cpp  go_to_pos.cpp  motion_controller.cpp  mueller_controller.cpp  set_values.cpp
lib/raptor_lib/components/mueller_controller/: CMakeLists.txt
lib/raptor_lib/components/waypoint_tracker/: CMakeLists.txt
lib/raptor_lib/components/waypoint_tracker/include/: waypoint_tracker.h
lib/raptor_lib/components/waypoint_tracker/src/: set_values.cpp  waypoint_tracker.cpp
lib/raptor_lib/modules/: CMakeLists.txt
lib/raptor_lib/modules/motion_controller copy/include/: motion_controller.h
lib/raptor_lib/modules/motion_controller/include/: ctrl_params.h  motion_controller.h
lib/raptor_lib/modules/motion_controller/src/: check_reached.cpp  go_to_pos.cpp  motion_controller.cpp  mueller_controller.cpp  set_values.cpp
lib/raptor_lib/modules/waypoint_tracker/include/: waypoint_tracker.h
(+8 files in other folders)
