add_subdirectory(circle_traj_position)
add_subdirectory(circle_traj_velocity)
add_subdirectory(lemniscate_traj_position)
add_subdirectory(square_traj)
add_subdirectory(go_to_position)
add_subdirectory(minimum_jerk)
add_subdirectory(minimum_jerk_new)
add_subdirectory(go_down)
add_subdirectory(grasping_first_version)
add_subdirectory(mueller_controller)
